@@ -20,39 +20,18 @@ public class BundleRuleServiceImpl implements BundleRuleService {
     @Override
     public BundleRule createRule(BundleRule rule) {
 
-        if (rule.getDiscountPercentage() <= 0 || rule.getDiscountPercentage() > 100) {
-            throw new IllegalArgumentException("Invalid discount percentage");
+        if (rule.getDiscountPercentage() < 1 || rule.getDiscountPercentage() > 100) {
+            throw new IllegalArgumentException("Invalid discount");
         }
 
-        if (rule.getRequiredProductIds() == null || rule.getRequiredProductIds().isBlank()) {
-            throw new IllegalArgumentException("Required products missing");
+        if (rule.getRequiredProductIds() == null ||
+            rule.getRequiredProductIds().trim().isEmpty() ||
+            rule.getRequiredProductIds().replace(",", "").trim().isEmpty()) {
+            throw new IllegalArgumentException("Invalid required products");
         }
 
         rule.setActive(true);
         return repo.save(rule);
-    }
-
-    @Override
-    public BundleRule updateRule(Long id, BundleRule updated) {
-
-        BundleRule existing = repo.findById(id)
-                .orElseThrow(IllegalArgumentException::new);
-
-        if (updated.getRuleName() != null) {
-            existing.setRuleName(updated.getRuleName());
-        }
-
-        if (updated.getDiscountPercentage() > 0 &&
-            updated.getDiscountPercentage() <= 100) {
-            existing.setDiscountPercentage(updated.getDiscountPercentage());
-        }
-
-        if (updated.getRequiredProductIds() != null &&
-            !updated.getRequiredProductIds().isBlank()) {
-            existing.setRequiredProductIds(updated.getRequiredProductIds());
-        }
-
-        return repo.save(existing);
     }
 
     @Override
@@ -61,12 +40,6 @@ public class BundleRuleServiceImpl implements BundleRuleService {
                 .orElseThrow(IllegalArgumentException::new);
         rule.setActive(false);
         repo.save(rule);
-    }
-
-    @Override
-    public BundleRule getRuleById(Long id) {
-        return repo.findById(id)
-                .orElseThrow(IllegalArgumentException::new);
     }
 
     @Override
